# coalaCheckBear-hs

./: README.md  coalaCheckBear-hs.cabal  in.example.json  stack.yaml
app/: Main.hs
