name:                coalaCheckBear-hs
version:             0.1.0.0
synopsis:            CoalaCheckBear in Haskell
description:         Please see README.md
homepage:            https://github.com/maweki/coalaCheckBear-hs
license:             GPL-3
license-file:        LICENSE
author:              Mario Wenzel
maintainer:          maweki@gmail.com
copyright:           2016 Mario Wenzel
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable coalaCheckBear-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coalaHs
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/coalaCheckBear-hs
